--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -21,6 +21,14 @@
       background: $secondary;
     }
   }
+  &-white{
+    background: $light;
+    color: $primary;
+    &:hover {
+      opacity: 0.9;
+      color: $secondary;
+    }
+  }
 }
 
 
