--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -37,6 +37,14 @@
     position: center center;
   }
 }
+@mixin backgroundImageRight($url: "") {
+  background: {
+    image: url($url);
+    size: cover;
+    repeat: no-repeat;
+    position: center right;
+  }
+}
 
 @mixin mediaQuery($width) {
   @media screen and (max-width: $width) {
