--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,6 +3,9 @@
 .header {
   background: $light;
   padding: 3rem 0;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
   &__wrapper {
     @include flexBetween;
   }
@@ -12,17 +15,79 @@
   &__nav {
     @include flexBetween;
     gap: 2rem;
+    @include mediaQuery($mobile) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      position: absolute;
+      top: 14rem;
+      background: $light;
+      width: 100%;
+      right: 0;
+      height: 92rem;
+      opacity: 0;
+      ul {
+        display: flex;
+        flex-direction: column;
+        li {
+          font-size: 4rem;
+        }
+      }
+      .button a {
+        background-color: $primary;
+        font-size: 2rem;
+        padding: 1.5rem 5rem;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
     ul {
       @include flexBetween;
       flex-wrap: wrap;
       justify-content: right;
       gap: 2rem;
       li {
-        font-weight: 100;
+        font-weight: 100 !important;
       }
     }
     .button a {
-        font-weight: 500;
-      }
+      font-weight: 500;
+    }
+  }
+  &__nav.open {
+    opacity: 100;
+    transition: all 0.5s ease;
+  }
+  .toggle__menu {
+    display: none;
+    @include mediaQuery($mobile) {
+      display: block;
+    }
+    transition: 0.5s ease;
+    span {
+      width: 40px;
+      height: 2px;
+      background-color: $primary;
+      display: block;
+    }
+    span:nth-child(2) {
+      margin-block: 10px;
+    }
+  }
+  .toggle__menu.open {
+    span:nth-child(2) {
+      opacity: 0;
+    }
+    span:first-child {
+      transition: all 0.5s ease;
+      transform: translate(-1px, 12px) rotate(-135deg);
+      transition: 0.5s ease;
+    }
+    span:last-child {
+      transition: all 0.5s ease;
+      transform: translate(-1px, -12px) rotate(135deg);
+      transition: 0.5s ease;
+    }
   }
 }
